# AR_VR_CORE

./: CMakeLists.txt  Face.cpp  Face.hpp  Solver.cpp  Solver.hpp  color_detector.cpp  color_detector.hpp  main.cpp  rubik_cube.cpp  rubik_cube.hpp  rubik_cube_3basic_solver.cpp  solve.cpp
